font correction on mobile

--- a/Frontend/styles/mobile.css
+++ b/Frontend/styles/mobile.css
@@ -157,16 +157,16 @@
     }
 
     .contact-text {
-        font-size: 16px; 
+        font-size: 18px; 
         margin: 0; 
         margin-bottom: 40px;
-        margin-top: 30px;
+        margin-top: 40px;
         max-width: 100%; 
         text-align: left; 
     }
 
     .contact-info {
-        font-size: 16px; 
+        font-size: 18px; 
         margin-top: -20px; 
         padding: 0 15px; 
     }
@@ -183,7 +183,7 @@
 
     .contact-btn {
         padding: 12px 25px; 
-        font-size: 16px; 
+        font-size: 18px; 
     }
 }
 
